# claude_code_ip_guard

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos.rs  main.rs  notifier.rs
src-tauri/src/ip/: aggregator.rs  cache.rs  connectivity.rs  mod.rs
src-tauri/src/ip/providers/: cloudflare.rs  ipapi_co.rs  ipinfo.rs  ipwho.rs  mod.rs
src-tauri/src/monitor/: apps.rs  mod.rs  nsworkspace.rs
src-tauri/src/settings/: mod.rs
src/components/: IpReportCard.tsx  SettingsPanel.tsx  ViolationBanner.tsx
src/hooks/: useIpReport.ts  useSettings.ts  useTauriEvent.ts
src/lib/: countries.ts
